kubernetes/apps/searxng/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
spec:
  type: ClusterIP
  selector:
    app: searxng
  ports:
    - name: http
      port: 8080
      targetPort: http
